--- a/src/components/Friends/Friends.css
+++ b/src/components/Friends/Friends.css
@@ -1,6 +1,5 @@
 .friend-wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  justify-content: center;
-  align-items: center;
+  justify-items: center;
 }
