--- a/src/components/Friend/Friend.css
+++ b/src/components/Friend/Friend.css
@@ -10,3 +10,17 @@
 .details {
   height: 250px;
 }
+
+button {
+  background-color: #48d1cc;
+  box-shadow: 2px 2px 2px #3baba7, -2px -2px 2px #55f7f1;
+  color: white;
+  padding: 5px 15px;
+  border-radius: 5px;
+  font-weight: 500;
+  font-family: inherit;
+  font-size: inherit;
+  margin-top: 20px;
+  border: none;
+  cursor: pointer;
+}
